CHANGELOG

>>VERSION 17.7.2
* Improved 2nd Tyrosh male skin
* Fixed bug with desert scorpions instead of jungle scorpions spawning in tropical forests
* Fixed potential bugs, caused by "legendary" mercenaries

>>VERSION 17.7.1
* Improved ukrainian translation (prod. DDPAT Knife Series)
* Fixed bug with anvil texture
* Fixed bug with agressive mobs AI

>>VERSION 17.7
* Greatly improved the Ice Wall and the Yi Ti Wall
* Greatly improved all the banners in the game (prod. Hummel009)
+ Added ruined wall castles
+ Added fixed castles in mountain biomes
+ Added Asshai Shield
+ Added feminized ranks
+ Added a config option for maximum fellowship size
+ Added a config option to tune how often the mod clears the playerdata cache for offline players' data
+ Added new fixed locations, ruines in general. Now 99% of waypoints have fixed structure.
+ Added not-legendary longsword and greatsword
+ Added config for snowy leaves

* Improved sword textures
* Improved seasonal-based plants in biomes
* Improved Craster's Barn and wifes' spawning
* Improved Craster skin
* Improved Samwell Tarly skin
* Improved Ghiscar Pit
* Improved village spawning
* Improved Petyr Baelish's brothel and Tobho Mott's smithy
* Improved Red Castle
* Improved fellowships GUI to be compatible with big UI scale
* Improved fellowship invitation mechanics
* Improved all translations
* Improved iron bank texture (prod. Hummel009)
* Improved tool & weapon stats
* Improved prostitute names & skins
* Improved ranks

* Optimized and recoded all the westeros structures
* Optimized the performance penalty from loading large fellowships upon player login
* Optimized NPCs checking for players with their miniquests
* Optimized rendering code

* Fixed bug with factions gui
* Fixed bug with chat achievements
* Fixed bug with frost damaging gift legendary mobs
* Fixed bug with goldsmithes in westeros
* Fixed bug with essos children not spawning in houses
* Fixed bug with villages in the villages